--- a/DigitalTimer/Base.lproj/Main.storyboard
+++ b/DigitalTimer/Base.lproj/Main.storyboard
@@ -26,11 +26,19 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tRN-Iy-vf4">
+                                <rect key="frame" x="164" y="318" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="sts:" destination="BYZ-38-t0r" eventType="valueChanged" id="hkI-WL-Znj"/>
+                                </connections>
+                            </switch>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="stw" destination="tRN-Iy-vf4" id="JYA-g0-KgO"/>
                         <outlet property="tl" destination="caf-fw-MhX" id="jq4-1b-4Kb"/>
                     </connections>
                 </viewController>
